# ChangeLog for net-analyzer/nethogs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nethogs/ChangeLog,v 1.15 2009/11/03 17:27:16 armin76 Exp $

  03 Nov 2009; Raúl Porcel <armin76@gentoo.org> nethogs-0.7.0.ebuild:
  Add ~ia64 wrt #282956

  07 May 2009; Samuli Suominen <ssuominen@gentoo.org> nethogs-0.7.0.ebuild,
  +files/nethogs-0.7.0-gcc44.patch:
  Fix compile with GCC 4.4

*nethogs-0.7.0 (29 Apr 2009)

  29 Apr 2009; Samuli Suominen <ssuominen@gentoo.org> -nethogs-0.6.0.ebuild,
  -files/nethogs-0.6.0-gcc34.diff, +nethogs-0.7.0.ebuild,
  +files/nethogs-0.7.0-Makefile.patch:
  Version bump.

  10 Dec 2008; Markus Meier <maekke@gentoo.org> nethogs-0.6.1_pre2.ebuild:
  amd64/x86 stable, bug #249898

*nethogs-0.6.1_pre2 (05 Dec 2008)

  05 Dec 2008; Samuli Suominen <ssuominen@gentoo.org>
  +files/nethogs-0.6.1_pre2-gcc43.patch, +nethogs-0.6.1_pre2.ebuild:
  Version bump with GCC 4.3 and GLIBC 2.8 patch wrt #249898, thanks to
  Pro <hyrurg at gmail.com>

  12 Apr 2007; <welp@gentoo.org> nethogs-0.6.0.ebuild:
  Stable on amd64

  12 Apr 2007; Markus Ullmann <jokey@gentoo.org> nethogs-0.6.0.ebuild:
  Ebuild QA and drop ppc per bug #154778 - thanks dertobi123 for verifying

  19 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> nethogs-0.6.0.ebuild:
  Removing virtual/libpcap wrt bug #117898

  17 Sep 2005; Marcelo Goes <vanquirius@gentoo.org> nethogs-0.6.0.ebuild:
  Fix hardcoded CFLAGS and gcc.

  16 Aug 2005; Simon Stelling <blubb@gentoo.org> nethogs-0.6.0.ebuild:
  added ~amd64 keyword

  19 Jul 2005; David Holm <dholm@gentoo.org> nethogs-0.6.0.ebuild:
  Added to ~ppc.

  07 May 2005; Marcelo Goes <vanquirius@gentoo.org> nethogs-0.6.0.ebuild:
  Marking x86 stable.

*nethogs-0.6.0 (04 Apr 2005)

  04 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +files/nethogs-0.6.0-gcc34.diff, +nethogs-0.6.0.ebuild: