@@ -1,9 +1,21 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX nethogs-0.6.1_pre2-gcc43.patch 936 RMD160 807eab01c9e123b9c9caf09ea9190a823a5ae597 SHA1 0f8d7655e7c9a0d574e99fba459293acd530fd85 SHA256 7d3248790a6f453ca9e32bf4cb3650d3899f4f7ee62112f360930e375ffc4326
 AUX nethogs-0.7.0-Makefile.patch 3267 RMD160 fd6695ef6ebdd265a8982b51865e3f046f581d9e SHA1 4588cf81b9bb1beff46da94085385cda18a41583 SHA256 ed09668778f0f981ac1fce4cc523db853759ec7a6f8cfc6b19c1b413cbc4fe6a
 AUX nethogs-0.7.0-gcc44.patch 309 RMD160 d98402e10449dc70d16cbe72665d07b871e89dfa SHA1 85b0a64ca021839e853196bf5d03862a77c489c9 SHA256 9653f9b226c55028b5bf5ab53c72500b5bd734cb2b1fc6db643eb912b74291ee
 DIST nethogs-0.6.1-pre2.tar.gz 31755 RMD160 e5fe79222e1883923a53fa6faf5e4f28e6553851 SHA1 4688615dacf22e109906645875cfe9d4005cae66 SHA256 800d1572a9f7309d003bc1185477755dcdae92ace88099bb306c981af6037ad7
 DIST nethogs-0.7.0.tar.gz 462155 RMD160 a0ed316b6bfc71608b2077f0040d782093199e7d SHA1 aa51f6064ffe1a3ddae351e87b5087ff92857269 SHA256 dbe45dd92ad25d19c5a38af04a26e2e2e9e0b1f692423c970239dfc421a66969
+DIST nethogs-0.8.0.tar.gz 38036 RMD160 5b53e376cfd55d831bcec0cfe49acb4142fc31e0 SHA1 5c06a99efd2ac1d3e155ac63334f8d69589122ab SHA256 b09cb3c2690a522f8b1314221095d5abb1958d50b56de6d36b11a8e6f28961d0
 EBUILD nethogs-0.6.1_pre2.ebuild 911 RMD160 8f2b7e0d837460e239caf0e5a1dcacb83f45ba72 SHA1 b04360c3c013c908edee90960a2d1942341a8419 SHA256 b32a2e2805833fbe72f0040f36b34e92169dda61a55470a1a41d1509f6ee0684
 EBUILD nethogs-0.7.0.ebuild 836 RMD160 ce0606064df1e6d223b41f970a70ab355e760f3f SHA1 aa483fbbce6942694ba5dc46b015715eb38d6cea SHA256 d4438336b5b51f8f308a434a486388e88da9d33fec94de6381e488ce3925d89e
-MISC ChangeLog 2305 RMD160 f4d6b17c2c501037968f4a45bbcd8cdb552b14ee SHA1 93efd67a9fbb2d93f59fd03e03017a6f599c3521 SHA256 f52d1af44d5ccdff7ab2d40dc33b52b5a070a7762bc7ef92fd8c4a3082f47a94
+EBUILD nethogs-0.8.0.ebuild 770 RMD160 fa54d4c96882aa2d7ed38a0ae0360afb920a6e92 SHA1 a5a6a5b6897fbd0ee9003406f3b5bcb502878fe3 SHA256 249170b6a8c2d0a662a1a56c2bd6f3d5f02b37a7f44eb5f02b259af089eca372
+MISC ChangeLog 2418 RMD160 1fb7b11a7a02e67bec18f9cc2e67fb5e070c8499 SHA1 8704dfb07b6bbc4408d75ffc8b5b472b8d5c0b52 SHA256 d54a354784ca2429a308da88625f269d50a801a93a56cd63d80885e4e8add5e4
 MISC metadata.xml 735 RMD160 f1fa8f6ae6a47dafa4601fd13a7018dbceac8000 SHA1 385773d26a316fefe9320db9f58d0922cb1e3314 SHA256 5ce2f1397461a65b352cbaaab1ce5ef48cff10fa923198e7ceead557183250a5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk6Sw9cACgkQVWmRsqeSphOxTQCeKn18XbEr4PNJkCFZsLv7nbyL
+SB0An1mRejjwTV2MJ/p9NbVZRtMcfPg0
+=5nSC
+-----END PGP SIGNATURE-----
